# MIPT_TP_21

./: README.md
.github/workflows/: main.yml
task0/: run.sh
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.h  main_test.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
